# jaiabot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  COPYING  README.md  build.sh  flatboat_build.sh  package-lock.json  sync.sh  voltage check.py
src/: CMakeLists.txt
src/arduino/: .gitignore  CMakeLists.txt  avrdude.conf  setup.sh  upload.sh  upload.sh.in  upload_spi.sh  upload_usb.sh  upload_usb_new.sh  upload_usb_old.sh
src/arduino/calibration/: calibration.ino  jaiabot_calibration_arduino.ino
src/arduino/control_surfaces/: .gitignore  Makefile  README.md  build.sh  control_surfaces.ino  deploy.sh  jaiabot  setup.sh
src/arduino/jaiabot_runtime/: .gitignore  crc16.h  jaiabot_runtime.ino
src/arduino/quickMotorcontrol/: quickMotorcontrol.ino
src/arduino/rudder_flap_test/: rudder_flap_test.ino
src/arduino/step_throttle_and_log_temp/: step_throttle_and_log_temp.ino
src/arduino/test1/: test1.ino
src/arduino/test2/: test2.ino
src/arduino/test_comms/: test_comms.ino
src/arduino/voltage_and_current/: voltage_and_current.ino
src/arduino/voltage_dummy/: voltage_dummy.ino
src/doc/: CMakeLists.txt
src/doc/copyright/: header_bin.txt  header_lib.txt
src/doc/deployment/: control_surfaces_test_deployment.yml  dev_deployment.yml  engineering.yml  lora_test_deployment.yml  loratest_deployment.yml  runtime_deployment.yml  sim_deployment.yml  simulation_deployment.yml
src/doc/doxygen/: CMakeLists.txt  jaiabot-hydro.doxy.in  jaiabot.doxy.in
src/doc/markdown/: CMakeLists.txt  environment_setup.md  feature-custom_overlays.md  page01_main.md  page02_change_log.md  page05_jaia_tool.md  page100_open_layers.md  page10_architecture.md  page110_coding_standards.md  page111_developing_with_react_context.md  page11_simulator.md  page120_working_with_jaia_software.md  page12_new_web_api.py  page12_rest_api.py  page12_web_api.md  page13_ssh_keys.md  page19_repository.md  page20_build.md  page21_customer_update.md  page25_embedded_setup.md  page30_configuration.md  page40_logging.md  page41_hdf5  page41_hdf5.md  page50_communications.md  page55_vpn.md  page56_cloud.md  page60_mission_management.md  page60_port_map.md  page65_port_map.md  page70_hardware.md  page75_health.md  page76_battery_health.md  page80_timing.md  page81_timing_command.md  page82_timing_health_updates  page82_timing_health_updates.md  page90_updating_software.md  page91_customer_deploy_custom_software.md  page91_deploying_software.md  (+5 more)
src/jdv/: package-lock.json  test.sh
src/jdv/client/: build.sh  package-lock.json  package.json  release.webpack.config.js  tsconfig.json
src/jdv/server/: jaia_messages.py  jaiabot_data_vision.py  jaiabot_data_vision.service.template  jaiabot_log_converter.py  jaiabot_paths.json  jaialogs.py  kmz.py  objects.py
src/lib/: CMakeLists.txt  exception.h  groups.h  intervehicle.h  metadata.h  version.h
src/lib/comms/: CMakeLists.txt  comms.h
src/lib/health/: health.h
src/lib/liaison/: CMakeLists.txt  config.proto  goby_liaison_jaiabot.in  jaiabot_liaison_load.cpp  liaison_jaiabot.cpp  liaison_jaiabot.h
src/lib/lora/: crc16.h  serial.h
src/lib/messages/: CMakeLists.txt  arduino.options  arduino.pb.c  arduino.pb.h  arduino.proto  bar30.proto  bounds.proto  control_command.proto  control_surfaces.options  control_surfaces.proto  dive_debug.proto  echo.proto  edna.proto  edna_pump.proto  engineering.proto  esc_temp.proto  example.proto  feather.options  feather.proto  fluorometer.proto  geographic_coordinate.proto  health.proto  helm.proto  high_control.proto  hub.proto  imu.proto  jaia_dccl.proto  lora_test.proto  low_control.proto  low_level_control.proto  metadata.proto  mission.proto  mission_manager_settings.proto  modem_message_extensions.proto  moos.proto  motor.proto  option_extensions.proto  pid_control.proto  portal.proto  pressure_temperature.proto  (+11 more)
src/lib/moos_gateway/: CMakeLists.txt  config.proto  jaiabot_gateway_config.proto  jaiabot_gateway_plugin.cpp  jaiabot_gateway_plugin.h
src/lib/util/: CMakeLists.txt  util.cpp  util.h
src/plot/: .gitignore  CMakeLists.txt  Makefile  README.md  app.py  jaia_paths.json  jaialogs.py  package-lock.json  package.json  requirements.txt  test.sh
src/plot/client/: build.sh  index.html  package-lock.json  package.json  release.webpack.config.js  script.js  style.css  test.webpack.config.js  webpack.config.js
src/plot/server/: app.py  contours.py  install_services.py  jaia_goby_converter.py  jaia_goby_converter.service.template  jaia_plot_server.py  jaia_plot_server.service.template  jaiabot_data_vision.py  jaiabot_log_converter.py  jaiabot_log_converter.service.template  jaiabot_plot.py  jaiabot_plot.service.template  jaialogs.py  objects.py
src/python/: .gitignore  CMakeLists.txt  build_venv.sh  requirements.txt  sync_requirements.sh  update_requirements.sh
src/python/adafruit/: adafruit_bno055.py  imu.py  imu_adafruit_bno055.py  imu_adafruit_bno085.py  imu_bno055.py  imu_bno085.py  imu_naviguider.py  imu_reading.py  imu_simulator.py  jaia_firm_bno085_reset_gpio_pin.py  jaiabot_imu.py  remote_test.sh  series.py  style.css  test.sh
src/python/adafruit-BNO055/: imu.py
src/python/adafruit_BNO055/: filters.py  imu.py  jaiabot_imu.py  orientation.py  processing.py  quaternion.py  series.py  vector3.py  waves.md  waves.py
src/python/adafruit_BNO085/: .gitignore  acceleration_analyzer.py  adafruit_imu.py  analysis_html.py  analyze.py  build_messages.sh  filters.py  imu.py  imu_reading.py  jaia_firm_bno085_reset_gpio_pin.py  jaia_h5.py  jaiabot_imu.py  orientation.py  processing.py  quaternion.py  series.py  (+4 more)
src/test/: CMakeLists.txt
src/web/: .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  BUILD_NOTES.TXT  BUILD_NOTES.TXT.sav  BUILD_NOTES.txt  CMakeLists.txt  NpmOutdated.txt  README.md  build.sh  install_dependencies.sh  jcc.conf  jest.config.js  openlayers.md  package-lock.json  package.json  package.json.SAV  package.json.in  production.env  remote_test.sh  requirements.txt  run.sh  test.sh  tsconfig.json  webpack.config.js  workspace.code-workspace
(+1342 files in other folders)
